tests/ui-tests/tests/cases/fragment-guess-validation.stderr
error: Field fiim does not exist on the GraphQL type Root. Did you mean film?
  --> $DIR/fragment-guess-validation.rs:15:13
   |
15 |         pub fiim: Option<Film>,
   |             ^^^^
